source/stylesheets/modules/_tuition.css.sass
.mod-tuition
  padding: 40px 0 20px
  text-align: center

  h2
    margin-bottom: 25px
    font-size: 48px
    font-weight: $font-weight-light

  h5
    line-height: 1.42857
    margin-bottom: 4em
    font-size: 24px

  h6
    line-height: 1.42857
    margin-bottom: 4em
    text-align: left

  p, li
    margin-bottom: $font-size * $line-height
    text-align: left

  ul,
  ol
    padding-left: 20px
    list-style: outside

  h3
    font-size: 32px
    font-weight: $font-weight-light
    letter-spacing: 0.01em
    margin-bottom: .5em
    text-align: left

  .graphs
    margin-top: 40px

    ul
      font-size: 0

    li
      width: calc(100% / 3)
      display: inline-block
      vertical-align: top
      margin-bottom: 40px
      font-size: $font-size
      text-align: center

      +max-width(800px)
        width: 100%
        margin-left: 0 !important

      &:before
        content: ""
        width: 123px
        height: 123px
        display: inline-block
        margin-bottom: 35px
        background: #656565 center center no-repeat
        background-size: 67px 51px
        +border-radius(50%)
        +transition(background .3s)

      @each $number in one, two, three, four
        &.#{$number}:before
          background-image: image-url("bar_#{$number}.png")

          +retina
            background-image: image-url("bar_#{$number}@2x.png")

    h3
      margin-bottom: 20px
      font-size: 32px
      font-weight: $font-weight-light
      text-align: center

    dl
      line-height: 1.71428

    dt,
    dd
      display: inline

    dd
      padding-left: 4px

      &:after
        content: "\A"
        white-space: pre

    .total
      color: $blue

  .financing-options,
  .alternative-in-house-financing,
  .tuition-guarantee
    margin-top: 55px
    margin-bottom: 55px

    .earnest,
    .climb,
    .affirm
      height: 50px
      max-width: 100%
      margin: 10px 30px 20px

  .deferment
    margin-bottom: 20px
    text-align: center

    .lendlayer
      height: 50px
      max-width: 100%
      margin-top: 10px

